--- a/app/views/articles/new.haml
+++ b/app/views/articles/new.haml
@@ -1,5 +1,11 @@
 %h1 Create an article
 
+- if @article.errors.any?
+  %h3 The following errors prevented the article from getting created
+  %ul
+    - @article.errors.full_messages.each do |msg|
+      %li= msg
+
 = form_for @article do |f|
   %p
     = f.label :title, "Title"
