--- a/app/views/articles/edit.haml
+++ b/app/views/articles/edit.haml
@@ -1,4 +1,4 @@
-%h1 Create an article
+%h2 Edit existing article 
 
 - if @article.errors.any?
   %h3 The following errors prevented the article from getting created
