--- a/app/views/articles/show.haml
+++ b/app/views/articles/show.haml
@@ -1,4 +1,7 @@
 %h2 Showing selected article
 
 %p Title: #{@article.title}
-%p Description #{@article.description}
+%p Description: #{@article.description}
+
+= link_to "Back to Articles Listing", articles_path 
+= link_to "Edit this Article", edit_article_path(@article)
