--- a/app/views/articles/edit.haml
+++ b/app/views/articles/edit.haml
@@ -1,19 +1,3 @@
 %h2 Edit existing article 
 
-- if @article.errors.any?
-  %h3 The following errors prevented the article from getting created
-  %ul
-    - @article.errors.full_messages.each do |msg|
-      %li= msg
-
-= form_for @article do |f|
-  %p
-    = f.label :title, "Title"
-    = f.text_field :title
-  %p
-    = f.label :desciption
-    = f.text_area :description
-  %p
-    = f.submit
-
-= link_to "Back to Articles Listing", articles_path
+= render 'form'
