--- a/app/views/page/home.haml
+++ b/app/views/page/home.haml
@@ -1,4 +1,4 @@
-%h2 Welcome
+.jumbotron.center
+  %h1 Alpha Blog
 
-= link_to 'about', about_path
-= link_to "Alpha Blog", articles_path
+  = link_to "Sign up now", "#", class: "btn btn-danger btn-lg btn-xlarge"
