styles errors and messsages partials

--- a/app/views/articles/_form.haml
+++ b/app/views/articles/_form.haml
@@ -1,8 +1,4 @@
-- if @article.errors.any?
-  %h3 The following errors prevented the article from getting created
-  %ul
-    - @article.errors.full_messages.each do |msg|
-      %li= msg
+= render 'shared/errors', obj: @article
 
 .row
   .col-xs-12
