--- a/app/views/shared/_messages.haml
+++ b/app/views/shared/_messages.haml
@@ -1,3 +1,7 @@
-- flash.each do |name, msg| 
-  %ul
-    %li= msg
+.row
+  .col-xs-10.col-xs-offset-1
+    - flash.each do |name, msg| 
+      .alert{class: "alert-#{name}"}
+        = link_to "#", class: "close", data:{dismiss:"alert"} do
+          &#215;
+        = content_tag :div, msg, id: "flash_#{name}" if msg.is_a?(String)
