--- a/app/assets/stylesheets/components/custom.scss
+++ b/app/assets/stylesheets/components/custom.scss
@@ -37,6 +37,15 @@
   background: #000;
 }
 
+.article-actions {
+  border-top: 1px solid #eaeaea;
+  padding-top: 5px;
+}
+
+.description {
+  margin-top: 0;
+}
+
 .footer {
   margin-top: 45px;
   padding-top: 5px;
