--- a/app/views/articles/show.haml
+++ b/app/views/articles/show.haml
@@ -1,7 +1,12 @@
-%h2 Showing selected article
+%h2{align: "center"} Title: #{@article.title}
+.well.col-xs-8.col-xs-offset-2
+  %h4.center.description
+    %strong Description:
+  %hr= simple_format(@article.description)
 
-%p Title: #{@article.title}
-%p Description: #{@article.description}
-
-= link_to "Back to Articles Listing", articles_path 
-= link_to "Edit this Article", edit_article_path(@article)
+  .article-actions
+    = link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary"
+    = link_to "Delete this article", article_path(@article), method: :delete,
+      data: {confirm: "Are you sure you want to delete the article"},
+      class: "btn btn-xs btn-danger"
+    = link_to "View all articles", articles_path, class: "btn btn-xs btn-success"
