--- a/app/views/articles/index.haml
+++ b/app/views/articles/index.haml
@@ -1,19 +1,16 @@
-%h2 Listing all articles
-%br
-= link_to "Create New Article", new_article_path
-%table
-  %thead
-    %tr
-      %th Title
-      %th Description
-  %tbody
-    - @articles.each do |article|
-      %tr
-        %td= article.title
-        %td= article.description
-        %td
-          = link_to "Edit", edit_article_path(article)
-        %td
-          = link_to "Show", article_path(article)
-        %td
-          = link_to "Delete", article_path(article), method: :delete, data: {confirm: "Are you sure?"}
+%h1{align: "center"} Listing all articles
+
+
+- @articles.each do |article|
+  .row
+    .col-xs-8.col-xs-offset-2
+      .well.well-lg
+        .article-title
+          = link_to article.title, article_path(article)
+        .article-body
+          = truncate(article.description, length: 100)
+        .article-actions
+          = link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary"
+          = link_to "Delete this article", article_path(article), method: :delete,
+            data: {confirm: "Are you sure you want to delete the article"},
+            class: "btn btn-xs btn-danger"
