--- a/app/views/articles/show.haml
+++ b/app/views/articles/show.haml
@@ -1,5 +1,15 @@
 %h2{align: "center"} Title: #{@article.title}
 .well.col-xs-8.col-xs-offset-2
+  - if @article.user 
+    %ul.listing
+      .row.center
+        .col-md-4.col-md-offset-4
+          %li Created by:
+          %li= link_to gravatar_for(@article.user), user_path(@article.user)
+          %li.article-title
+            = link_to @article.user.username, user_path(@article.user)
+          %li.small
+            = pluralize(@article.user.articles.count, "article") if @article.user.articles
   %h4.center.description
     %strong Description:
   %hr= simple_format(@article.description)
