--- a/app/views/articles/index.haml
+++ b/app/views/articles/index.haml
@@ -1,3 +1,7 @@
 %h1{align: "center"} Listing all articles
 
+.paginate{align: "center"}
+  = will_paginate
 = render 'article', obj: @articles
+.paginate{align: "center"}
+  = will_paginate
